Wed Apr 18 18:28:26 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Removed tests/DCPS/Messenger_Imr from the list.

        * examples:
        * examples/DCPS:

          Created new directories.
	
        * examples/DCPS/Messenger_IOGR_Imr:
        * examples/DCPS/Messenger_Imr:

          Moved existing tests from the corresponding directories in
          tests/DCPS.
	
        * tests/DCPS/Messenger_IOGR_Imr:
        * tests/DCPS/Messenger_IOGR_Imr/Aggregator.h:
        * tests/DCPS/Messenger_IOGR_Imr/Aggregator.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/DataReaderListener.h:
        * tests/DCPS/Messenger_IOGR_Imr/DataReaderListener.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/Messenger.idl:
        * tests/DCPS/Messenger_IOGR_Imr/Messenger_IOGR_Imr.mpc:
        * tests/DCPS/Messenger_IOGR_Imr/README:
        * tests/DCPS/Messenger_IOGR_Imr/Writer.h:
        * tests/DCPS/Messenger_IOGR_Imr/Writer.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/domain_ids:
        * tests/DCPS/Messenger_IOGR_Imr/pub.ini:
        * tests/DCPS/Messenger_IOGR_Imr/publisher.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/run_test.pl:
        * tests/DCPS/Messenger_IOGR_Imr/sub.ini:
        * tests/DCPS/Messenger_IOGR_Imr/subscriber.cpp:
        * tests/DCPS/Messenger_Imr:
        * tests/DCPS/Messenger_Imr/DataReaderListener.h:
        * tests/DCPS/Messenger_Imr/DataReaderListener.cpp:
        * tests/DCPS/Messenger_Imr/Messenger.idl:
        * tests/DCPS/Messenger_Imr/Messenger_Imr.mpc:
        * tests/DCPS/Messenger_Imr/README:
        * tests/DCPS/Messenger_Imr/Writer.h:
        * tests/DCPS/Messenger_Imr/Writer.cpp:
        * tests/DCPS/Messenger_Imr/domain_ids:
        * tests/DCPS/Messenger_Imr/pub.ini:
        * tests/DCPS/Messenger_Imr/publisher.cpp:
        * tests/DCPS/Messenger_Imr/run_test.pl:
        * tests/DCPS/Messenger_Imr/sub.ini:
        * tests/DCPS/Messenger_Imr/subscriber.cpp:
